Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1649

Installing the Qt SDK to d:\NokiaQtSDK or d:\maemo\NokiaQtSDK instead of the default c:\NokiaQtSDK caused compilation errors related to perl.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.1.0
    • Qt Creator 1.3.85 (2.0.0-rc1)
    • Remote Linux
    • None
    • Windows 7 64bit with 2 partitions C: and D: on dell inspiron 1520 laptop
    • fa81b861ed810defef9f47f4d97526e6ce4f3dc2

    Description

      Before installing the Qt Mobility 1.0RC sdk, I had the beta version, which worked well.
      The beta version was installed to D:\maemo\NokiaQtSDK

      I did the following in order to upgrade to the new 1.0RC :
      1. Uninstalled everything.
      2. Reboot
      3. Downlaoded the offline 900MB installer.
      4. Installed with custom mode (selecting ALL components) to D:\maemo\NokiaQtSDK

      When I tried to compile something directly to my N900 over wifi with Mad Developer, I got the following error :

      ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
      Running build steps for project HelloWorld...
      Starting: "d:/nokiaqtsdk/maemo/4.6.2/targets/fremantle-pr12/bin/qmake.exe" C:/Maemo/Projects/HelloWorld/HelloWorld/HelloWorld.pro -r -spec default -unix
      The process "d:/nokiaqtsdk/maemo/4.6.2/targets/fremantle-pr12/bin/qmake.exe" exited normally.
      Starting: "D:/nokiaqtsdk/maemo/4.6.2/bin/make.exe" -w
      make: Entering directory `/c/Maemo/Projects/HelloWorld/HelloWorld-build'
      make: Nothing to be done for `first'.
      make: Leaving directory `/c/Maemo/Projects/HelloWorld/HelloWorld-build'
      The process "D:/nokiaqtsdk/maemo/4.6.2/bin/make.exe" exited normally.
      Creating package file ...
      Package Creation: Running command 'dh_installdirs'.
      Packaging Error: Command 'dh_installdirs' failed. Output was: Can't locate Debian/Debhelper/Dh_Lib.pm in @INC (@INC contains: d \nokiaqtsdk\maemo\4.6.2\madlib/perl5 /usr/lib/perl5/5.6/msys /usr/lib/perl5/5.6 /usr/lib/perl5/site_perl/5.6/msys /usr/lib/perl5/site_perl/5.6 /usr/lib/perl5/site_perl/5.6/msys /usr/lib/perl5/site_perl/5.6 /usr/lib/perl5/vendor_perl/5.6/msys /usr/lib/perl5/vendor_perl/5.6 /usr/lib/perl5/vendor_perl/5.6/msys /usr/lib/perl5/vendor_perl/5.6 .) at d:/nokiaqtsdk/maemo/4.6.2/madbin/dh_installdirs line 10. BEGIN failed--compilation aborted at d:/nokiaqtsdk/maemo/4.6.2/madbin/dh_installdirs line 10.
      Error while building project HelloWorld (target: Maemo)
      When executing build step ''
      ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------

      I tried using perl PUSH @INC to add the path of module, it worked, but then I had another error.
      I then uninstalled everything and installed again to d:\nokiaqtsdk, it didn't help,
      as last resort someone at talk.maemo.org suggested I try to install the whole thing to C:\nokiaqtsdk - This Worked.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            heimrich Karsten Heimrich
            eitama Eitam Doodai
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes