Fix building projects if MADDE is on a different drive then the project.

Task-number: QTCREATORBUG-1649
Reviewed-by: ck